test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/glob_imported_items/src/lib_2.sw
library;

pub use ::items_1::Items1Enum2;
