test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/aliases/src/lib_5_1.sw
library;

pub use ::items_5::Items5Trait as Alias5Trait;
